--- a/index.html
+++ b/index.html
@@ -18,9 +18,77 @@
       <button class="form-button" type="submit"><i class="fas fa-search"></i></button>
     </form>
 
-    <div>
-      <div><i class="fas fa-list fa-red"></i></div>
+    <!-- <div class="category1">
+      <ul>
+        <li><span><i class="fas fa-list fa-red"></i></span><a href="#">カテゴリーから探す</a>
+          <ul>
+            <li><a href="#">レディース</a></li>
+            <li><a href="#">メンズ</a></li>
+            <li><a href="#">ベビー・キッズ</a></li>
+            <li><a href="#">インテリア・住まい・小物</a></li>
+            <li><a href="#">本・音楽・ゲーム</a></li>
+            <li><a href="#">おもちゃ・ホビー・グッズ</a></li>
+            <li><a href="#">コスメ・香水・美容</a></li>
+            <li><a href="#">家電・スマホ・カメラ</a></li>
+            <li><a href="#">スポーツ・レジャー</a></li>
+            <li><a href="#">ハンドメイド</a></li>
+            <li><a href="#">チケット</a></li>
+            <li><a href="#">自動車・オートバイ</a></li>
+            <li><a href="#">その他</a></li>
+            <li><a href="#">カテゴリー一覧</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
+    <div class="category2">
+      <ul>
+        <li><span><i class="far fa-tag"></i></span><a href="#">ブランドから探す</a>
+          <ul>
+            <li><a href="#">シャネル</a></li>
+            <li><a href="#">ナイキ</a></li>
+            <li><a href="#">ルイ ヴィトン</a></li>
+            <li><a href="#">シュプリーム</a></li>
+            <li><a href="#">アディダス</a></li>
+            <li><a href="#">ブランド一覧</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  -->
+
+  <ul class="gnav">
+    <li>
+      <a href="#">カテゴリーから探す</a>
+      <ul>
+        <li><a href="#">レディース</a></li>
+        <li><a href="#">メンズ</a></li>
+        <li><a href="#">ベビー・キッズ</a></li>
+        <li><a href="#">インテリア・住まい・小物</a></li>
+        <li><a href="#">本・音楽・ゲーム</a></li>
+        <li><a href="#">おもちゃ・ホビー・グッズ</a></li>
+        <li><a href="#">コスメ・香水・美容</a></li>
+        <li><a href="#">家電・スマホ・カメラ</a></li>
+        <li><a href="#">スポーツ・レジャー</a></li>
+        <li><a href="#">ハンドメイド</a></li>
+        <li><a href="#">チケット</a></li>
+        <li><a href="#">自動車・オートバイ</a></li>
+        <li><a href="#">その他</a></li>
+       <li><a href="#">カテゴリー一覧</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="#">ブランドから探す</a>
+      <ul>
+        <li><a href="#">シャネル</a></li>
+        <li><a href="#">ナイキ</a></li>
+        <li><a href="#">ルイ ヴィトン</a></li>
+        <li><a href="#">シュプリーム</a></li>
+        <li><a href="#">アディダス</a></li>
+        <li><a href="#">ブランド一覧</a></li>
+      </ul>
+    </li>
+  </ul>
+
 
 
 
