ロゴと検索boxのレイアウト変更

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
       <p>プレスリリース</p>
       <p>公式ブログ</p>
       <p>メルカリロゴ利用ガイドライン</p>
+      <i class="fab fa-twitter fa-white fa-2x"></i><i class="fab fa-facebook-square fa-white fa-2x"></i>
     </section>
     
     <section>
