レイアウト調整

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
       <img class="title-img" src="./image/スクリーンショット 2020-04-06 0.19.15.png" alt="">
       <form class="form-box">
         <input class="form-input" type="search" placeholder="何かお探しですか？" aria-label="Search" name="title">
-        <button class="form-button" type="submit"><i class="fas fa-search"></i></button>
+        <button class="form-button" type="submit"><i class="fas fa-search fa-lg"></i></button>
       </form>
     </div>
 
 <!-- ドロップダウンメニュー -->
   <ul class="gnav">
     <li>
+      <div class="left">
       <i class="fas fa-list fa-red"></i><a href="#">カテゴリーから探す</a>
+      </div>
       <ul>
         <li>
           <a href="#">レディース</a>
@@ -78,7 +80,9 @@
       </ul>
     </li>
     <li>
+      <div class="left">
       <i class="fas fa-tag fa-red"></i><a href="#">ブランドから探す</a>
+      </div>
       <ul>
         <li><a href="#">シャネル</a></li>
         <li><a href="#">ナイキ</a></li>
@@ -88,12 +92,14 @@
         <li><a href="#">ブランド一覧</a></li>
       </ul>
     </li>
+    <div class="right">
+      <a href="#" class="sign">新規会員登録</a>
+      <a href="#" class="login">ログイン</a>
+    </div>
   </ul>
 
-  <div>
-    <a href="#" class="sign">新規会員登録</a>
-    <a href="#" class="login">ログイン</a>
-  </div>
+
+
 
   </header>
 
@@ -103,15 +109,12 @@
   <img class="main-img" src="./image/スクリーンショット 2020-04-06 19.13.37.png" alt="">
 
   <h1>人気のカテゴリー</h1>
-  <div>
+  <div class="main-picup">
     <a href="#" class="picup">レディース</a>
     <a href="#" class="picup">メンズ</a>
     <a href="#" class="picup">家電・スマホ・カメラ</a>
     <a href="#" class="picup">おもちゃ・ホビー・グッズ</a>
   </div>
-
-
-
 
   <!-- メイン２ -->
 
