ドロップダウンメニュー調整

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 <!-- ドロップダウンメニュー -->
   <ul class="gnav">
     <li>
-      <div class="left">
       <i class="fas fa-list fa-red"></i><a href="#">カテゴリーから探す</a>
-      </div>
       <ul>
         <li>
           <a href="#">レディース</a>
@@ -80,9 +78,7 @@
       </ul>
     </li>
     <li>
-      <div class="left">
       <i class="fas fa-tag fa-red"></i><a href="#">ブランドから探す</a>
-      </div>
       <ul>
         <li><a href="#">シャネル</a></li>
         <li><a href="#">ナイキ</a></li>
@@ -118,6 +114,10 @@
 
   <!-- メイン２ -->
 
+  <div>
+
+
+  </div>
 
 
 
