--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
       <a href="#" class="login">ログイン</a>
     </div>
   </ul>
-
-
-
-
   </header>
+
+  <img class="exhibition" src="./image/スクリーンショット 2020-04-07 20.41.51.png" alt="">
+
 
   <!-- メイン -->
   <br>
