商品一覧ページ　作成

--- a/index.html
+++ b/index.html
@@ -111,9 +111,29 @@
     <a href="#" class="picup">おもちゃ・ホビー・グッズ</a>
   </div>
 
-  <!-- メイン２ -->
+  <!-- メイン２・カード型コンポーネント -->
+  <div class="main2">
+    <h1 class="title2">レディース新着アイテム</h1>
+    <section class="card">
+      <img class="card-img" src="./image/スクリーンショット 2020-04-07 22.02.39.png" alt="">
+      <div class="card-content">
+        <p class="card-text">coach ショルダーバック</p>
+      </div>
+    </section>
 
-  <div>
+    <section class="card">
+      <img class="card-img" src="./image/スクリーンショット 2020-04-07 22.02.51.png" alt="">
+      <div class="card-content">
+        <p class="card-text">ジャージ　美品</p>
+      </div>
+    </section>
+
+    <section class="card">
+      <img class="card-img" src="./image/スクリーンショット 2020-04-07 22.03.08.png" alt="">
+      <div class="card-content">
+        <p class="card-text">LOUISVUITTON ケース</p>
+      </div>
+    </section>
 
 
   </div>
